crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '08:00:2b:01:02:03:04:05     '::macaddr8;"
---
SelectStmt@0..48
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..47
    TypeCast@7..47
      AConst@7..37
        Sconst@7..37 "'08:00:2b:01:02:03:04 ..."
      Typecast@37..39 "::"
      TypeName@39..47
        Ident@39..47 "macaddr8"
  Ascii59@47..48 ";"

