crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO macaddr8_data VALUES (18, '08002b-0102030405');"
---
InsertStmt@0..59
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "macaddr8_data"
  Whitespace@25..26 " "
  SelectStmt@26..57
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..57
      AConst@34..36
        Iconst@34..36 "18"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..57
        Sconst@38..57 "'08002b-0102030405'"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

