crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@41.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO macaddr8_data VALUES (19, '0800.2b01.0203.0405');"
---
InsertStmt@0..61
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "macaddr8_data"
  Whitespace@25..26 " "
  SelectStmt@26..59
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..59
      AConst@34..36
        Iconst@34..36 "19"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..59
        Sconst@38..59 "'0800.2b01.0203.0405'"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

