crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO macaddr8_data VALUES (21, '08002b0102030405');"
---
InsertStmt@0..58
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "macaddr8_data"
  Whitespace@25..26 " "
  SelectStmt@26..56
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..56
      AConst@34..36
        Iconst@34..36 "21"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..56
        Sconst@38..56 "'08002b0102030405'"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

