crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@44.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM macaddr8_data ORDER BY 1;
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..27
    Ident@14..27 "macaddr8_data"
  Whitespace@27..28 " "
  SortBy@28..38
    Order@28..33 "ORDER"
    Whitespace@33..34 " "
    By@34..36 "BY"
    Whitespace@36..37 " "
    AConst@37..38
      Iconst@37..38 "1"
  Ascii59@38..39 ";"

