crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@45.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX macaddr8_data_btree ON macaddr8_data USING btree (b);
---
IndexStmt@0..66
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..32 "macaddr8_data_btree"
  Whitespace@32..33 " "
  On@33..35 "ON"
  Whitespace@35..36 " "
  RangeVar@36..49
    Ident@36..49 "macaddr8_data"
  Whitespace@49..50 " "
  Using@50..55 "USING"
  Whitespace@55..56 " "
  Ident@56..61 "btree"
  Whitespace@61..62 " "
  Ascii40@62..63 "("
  IndexElem@63..64
    Ident@63..64 "b"
  Ascii41@64..65 ")"
  Ascii59@65..66 ";"

