crates/pg_syntax/tests/snapshots/postgres_regress/macaddr8@47.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT a, b, trunc(b) FROM macaddr8_data ORDER BY 2, 1;"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "a"
  Ascii44@8..9 ","
  Whitespace@9..10 " "
  ResTarget@10..11
    ColumnRef@10..11
      Ident@10..11 "b"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..20
    FuncCall@13..20
      Ident@13..18 "trunc"
      Ascii40@18..19 "("
      ColumnRef@19..20
        Ident@19..20 "b"
  Ascii41@20..21 ")"
  Whitespace@21..22 " "
  From@22..26 "FROM"
  Whitespace@26..27 " "
  RangeVar@27..40
    Ident@27..40 "macaddr8_data"
  Whitespace@40..41 " "
  SortBy@41..51
    Order@41..46 "ORDER"
    Whitespace@46..47 " "
    By@47..49 "BY"
    Whitespace@49..50 " "
    AConst@50..51
      Iconst@50..51 "2"
  Ascii44@51..52 ","
  Whitespace@52..53 " "
  SortBy@53..54
    AConst@53..54
      Iconst@53..54 "1"
  Ascii59@54..55 ";"

